test/resource/valid/exists.ftl
<#assign x = 1>

- <#if x??>good</#if>