test/resource/invalid/condition_else.ftl
<#if foo>
<#else>
  <#elseif>
</#if>
